# Kya

./: .gitignore  .gitmodules  BugList.md  CMakeLists (2).txt  CMakeLists.txt  CMakePresets.json  DoRobo.bat  README.md  renderdoc.csv
debug/: ActorFighter.natvis  PackedType.natvis
docs/: debug-drawing-reference.md  particles-draw.md  renderer-feedback.md
logs/: async_log.txt  edMem.txt
port/: CMakeLists.txt
port/Archive/: CMakeLists.txt  archive.cpp  archive.h
port/DebugMenu/: CMakeLists.txt
port/DebugMenu/ext/gizmo/: CMakeLists.txt
port/DebugMenu/ext/gizmo/include/: gizmo.h
port/DebugMenu/ext/gizmo/src/: gizmo.cpp
port/DebugMenu/include/: Callstack.h  DebugCollisionDrawing.h  DebugCollisionPrimitives.h  DebugHelpers.h  DebugMenu.h  DebugPathDrawing.h  DebugRenderer.h
port/DebugMenu/src/: DebugActor.cpp  DebugCallstackPreviewer.cpp  DebugCallstackPreviewer.h  DebugCamera.cpp  DebugCamera.h  DebugCheckpoint.cpp  DebugCheckpoint.h  DebugCinematic.cpp  DebugCinematic.h  DebugCollision.cpp  DebugCollision.h  DebugEvent.cpp  DebugEvent.h  DebugFrameBuffer.cpp  DebugFrameBuffer.h  DebugHelpers.cpp  DebugHelpers.h  DebugHero.cpp  DebugHero.h  DebugHeroReplay.cpp  DebugHeroReplay.h  DebugInput.cpp  DebugInput.h  DebugMaterial.cpp  DebugMaterial.h  DebugMaterialPreviewer.cpp  DebugMaterialPreviewer.h  DebugMemory.cpp  DebugMemory.h  DebugMenu.cpp  DebugMenu.h  DebugMenuDebugPanel.cpp  DebugMenuDebugPanel.h  DebugMenuInput.cpp  DebugMenuLayout.cpp  DebugMenuLayout.h  DebugMenuLog.cpp  DebugMenuLog.h  DebugMenuRegistrations.cpp  DebugMenuToolbar.cpp  (+39 more)
port/DebugMenu/src/Actor/: DebugActor.cpp  DebugActor.h  DebugActorBehaviour.cpp  DebugActorBehaviour.h  DebugActorBonusFountain.cpp  DebugActorBonusFountain.h  DebugActorCollision.cpp  DebugActorCollision.h  DebugActorDCA.cpp  DebugActorDCA.h  DebugActorJamGut.cpp  DebugActorJamGut.h  DebugActorMovingPlatform.cpp  DebugActorMovingPlatform.h  DebugActorNativShop.cpp  DebugActorNativShop.h  DebugActorShip.cpp  DebugActorShip.h  DebugActorSwitch.cpp  DebugActorSwitch.h  DebugActorWind.cpp  DebugActorWind.h  DebugActorWolfen.cpp  DebugActorWolfen.h
port/DebugMenu/src/Components/: DebugVision.cpp  DebugVision.h
port/Hash/: CMakeLists.txt  hash.h
port/Job/: CMakeLists.txt  job.h
port/Log/: CMakeLists.txt  log.cpp  log.h
port/Mesh/src/: Mesh.cpp  Mesh.h
port/Pool/: CMakeLists.txt
port/Sprite/: CMakeLists.txt
port/Sprite/src/: Sprite.cpp  Sprite.h
port/Test/: CMakeLists.txt
port/Test/src/: tests.cpp
port/Texture/: CMakeLists.txt
port/Texture/src/: Texture.cpp  Texture.h
port/Windows/: WindowsFunctions.cpp
port/Windows/Host/: CMakeLists.txt
port/Windows/Host/src/: win_main.cpp
port/Windows/Input/: gamepad.cpp
port/Windows/Renderer/: CMakeLists.txt
port/Windows/Renderer/DebugMenu/: DebugMenu.cpp  DebugMenu.h
port/Windows/Renderer/Shaders/: CMakeLists.txt
port/Windows/Renderer/Shaders/compiler/: CMakeLists.txt
port/Windows/Renderer/Shaders/compiler/src/: ShaderCompiler.cpp
port/Windows/Renderer/Shaders/config/: ShaderConfig.h
port/Windows/Renderer/Shaders/src/: alphafix.frag.glsl  displaylist.frag.glsl  displaylist.geom.glsl  displaylist.vert.glsl  displaylistnotex.frag.glsl  fade.frag.glsl  fullscreen.vert.glsl  gray.frag.glsl  meshviewer.frag.glsl  meshviewer.hlsl  meshviewer.vert.glsl  native.frag.glsl  native.vert.glsl  native_debug_line.frag.glsl  native_debug_line.vert.glsl  postprocess.vert.glsl  ps2.frag.glsl
port/Windows/Renderer/Shaders/src/ps2/: ps2.hlsl
port/Windows/Renderer/Vulkan/src/: FrameBuffer.cpp  FrameBuffer.h  GSState.h  GSVector.h  MD5.h  NativeBlending.cpp  NativeBlending.h  NativeDebug.cpp  NativeRenderer.cpp  NativeRenderer.h  Pipeline.cpp  Pipeline.h  TextureCache.cpp  TextureCache.h  TextureCacheRowOffset.h  UniformBuffer.cpp  UniformBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanColorImage.cpp  VulkanColorImage.h  VulkanCommands.cpp  VulkanHardwarePS2.cpp  VulkanHardwarePS2.h  VulkanImage.cpp  VulkanImage.h  VulkanIncludes.h  VulkanPS2.cpp  VulkanPS2.h  VulkanReflect.cpp  VulkanReflect.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h
port/Windows/Renderer/Vulkan/src/Native/: Blending.cpp  Blending.h  NativeDebug.cpp  NativeDebug.h  NativeDebugShapes.cpp  NativeDebugShapes.h  NativeDisplayList.cpp  NativeDisplayList.h  NativeRenderer.cpp  NativeRenderer.h  NativeRendererRecording.inl  NativeRendererSetup.inl  NativeRendererSubmission.inl  PostProcessing.cpp  PostProcessing.h
port/Windows/Renderer/Vulkan/src/Objects/: FrameBuffer.cpp  Pipeline.cpp  Pipeline.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanColorImage.cpp  VulkanCommands.cpp  VulkanCommands.h  VulkanImage.cpp  VulkanImage.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.h
port/Windows/Renderer/Vulkan/src/Texture/: TextureCache.cpp  TextureCache.h  TextureUpdate.cpp  TextureUpdate.h  TextureUpscale.cpp  TextureUpscale.h
port/Windows/Renderer/Vulkan/src/pcsx2/: Selectors.cpp  Selectors.h  VKBuilders.cpp  VKBuilders.h
port/Windows/Renderer/ext/SPIRV-Reflect/: CMakeLists.txt
port/Windows/Renderer/ext/imgui/: CMakeLists.txt
port/Windows/Renderer/include/: GIFReg.h  GSState.h  ScopedTimer.h  delegate.h  displaylist.h  renderer.h
port/ext/: .gitignore  pss.7z
port/ext/pss/: CMakeLists.txt  main.c
port/ext/pss/pss/: CMakeLists.txt
port/ext/pss/pss/ext/: .gitignore
port/ext/pss/pss/ext/libfmemopen/: CMakeLists.txt
port/ext/pss/pss/ext/libmpeg2/: CMakeLists.txt
port/ext/pss/pss/include/: decode.h
port/ext/pss/pss/src/: decode.c  pss.c  pss.h
port/include/: gamepad.h  input_functions.h  logging.h  port.h  profiling.h  renderer.h
port/pcsx2/VU/: CMakeLists.txt
port/pcsx2/VU/include/: PCSX2_VU.h
port/pcsx2/VU/src/: Common.cpp  Common.h  DisVU1Micro.cpp  MTVU.cpp  MTVU.h  PCSX2_VU.cpp  Pcsx2Defs.h  VU.h  VU0.cpp  VU0micro.cpp  VU0microInterp.cpp  VU1micro.cpp  VU1microInterp.cpp  VUflags.cpp  VUmicro.cpp  VUmicro.h  VUmicroMem.cpp  VUops.cpp
port/src/: ObjectNaming.cpp  input_functions.cpp  object_naming.cpp
python/: FunctionToFilename.txt  (+5 more)
(+817 files in other folders)
